--- a/locale/i18n_en.json
+++ b/locale/i18n_en.json
@@ -1,12 +1,17 @@
 {
 "app_name":"Jvx Mobile Client ",
-"enter_code_label":"Username",
-"enter_code_hint":"Your username",
-"enter_otp_label":"Password",
-"enter_otp_hint":"Your password",
-"get_otp":"Get OTP",
-"resend_otp":"Resend Login Request",
+"enter_username_label":"Username",
+"enter_username_hint":"Your username",
+"enter_password_label":"Password",
+"enter_password_hint":"Your password",
 "login":"Login",
-"enter_valid_number":"Enter a valid username",
-"enter_valid_otp":"Enter a valid password"
+"enter_valid_username":"Enter a valid username",
+"enter_valid_password":"Enter a valid password",
+"settings": "Settings",
+"settings_app_name": "Applicationname",
+"settings_app_name_hint": "Enter new application name",
+"settings_base_url": "Base Url",
+"settings_base_url_hint": "Enter base url",
+"settings_general": "General settings",
+"settings_language": "Language"
 }
