Added Image Download and FontAwesome support

--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -16,6 +16,10 @@
     "settings_language": "Sprache",
     "settings_save": "Speichern",
     "settings_exit": "Zurück",
-    "logout": "Ausloggen"
+    "logout": "Ausloggen",
+    "remember_me": "Eingeloggt bleiben?",
+    "error": "Fehler",
+    "close": "Schließen",
+    "go_to_settings": "Zu Einstellungen"
 }
     
