Open Screen works + some refactoring

--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -7,17 +7,17 @@
     "login":"Einloggen",
     "enter_valid_username":"Einen validen Benutzernamen eingeben",
     "enter_valid_password":"Ein valides Passwort eingeben",
-    "settings": "Einstellungen",
+    "Settings": "Einstellungen",
     "settings_app_name": "Applikationsname",
     "settings_app_name_hint": "Neuen Applikationsnamen eingeben",
     "settings_base_url": "Basis Url",
     "settings_base_url_hint": "Basis Url eingeben",
     "settings_general": "Applikations Einstellungen",
     "settings_language": "Sprache",
-    "settings_save": "Speichern",
-    "settings_exit": "Zurück",
+    "Save": "Speichern",
+    "Exit": "Zurück",
     "logout": "Ausloggen",
-    "remember_me": "Eingeloggt bleiben?",
+    "Remember me?": "Eingeloggt bleiben?",
     "error": "Fehler",
     "close": "Schließen",
     "go_to_settings": "Zu Einstellungen"
