--- a/locale/i18n_en.json
+++ b/locale/i18n_en.json
@@ -1,24 +1,24 @@
 {
     "app_name":"Jvx Mobile Client ",
-    "enter_username_label":"Username",
+    "Username:":"Username",
     "enter_username_hint":"Your username",
-    "enter_password_label":"Password",
+    "Password:":"Password",
     "enter_password_hint":"Your password",
-    "login":"Login",
+    "Logon":"Login",
     "enter_valid_username":"Enter a valid username",
     "enter_valid_password":"Enter a valid password",
-    "settings": "Settings",
+    "Settings": "Settings",
     "settings_app_name": "Applicationname",
     "settings_app_name_hint": "Enter new application name",
     "settings_base_url": "Base Url",
     "settings_base_url_hint": "Enter base url",
     "settings_general": "Application settings",
     "settings_language": "Language",
-    "settings_save": "Save",
-    "settings_exit": "Exit",
-    "logout": "Logout",
-    "remember_me": "Remember me?",
-    "error": "Error",
-    "close": "Close",
+    "Save": "Save",
+    "Exit": "Exit",
+    "Logout": "Logout",
+    "Remember me?": "Remember me?",
+    "Error": "Error",
+    "Close": "Close",
     "go_to_settings": "Go to settings"
 }
