added config for developers + label with is now dependent on parent width

--- a/locale/i18n_en.json
+++ b/locale/i18n_en.json
@@ -4,7 +4,7 @@
     "enter_username_hint":"Your username",
     "Password:":"Password",
     "enter_password_hint":"Your password",
-    "Logon":"Login",
+    "Logon":"Logon",
     "enter_valid_username":"Enter a valid username",
     "enter_valid_password":"Enter a valid password",
     "Settings": "Settings",
