added debug property to config + login has gradient + menu drawer shows user and version

--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -20,6 +20,7 @@
     "Remember me?": "Eingeloggt bleiben?",
     "Error": "Fehler",
     "Close": "Schließen",
-    "go_to_settings": "Zu Einstellungen"
+    "go_to_settings": "Zu Einstellungen",
+    "no_username_or_password": "Bitte geben sie Benutzernamen und Passwort ein"
 }
     
