changed drawer translation

--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -21,6 +21,7 @@
     "Error": "Fehler",
     "Close": "Schließen",
     "go_to_settings": "Zu Einstellungen",
-    "no_username_or_password": "Bitte geben sie Benutzernamen und Passwort ein"
+    "no_username_or_password": "Bitte geben sie Benutzernamen und Passwort ein",
+    "Logged in as": "Angemeldet als"
 }
     
