--- a/locale/i18n_en.json
+++ b/locale/i18n_en.json
@@ -21,5 +21,6 @@
     "Error": "Error",
     "Close": "Close",
     "go_to_settings": "Go to settings",
-    "no_username_or_password": "Please enter username and password"
+    "no_username_or_password": "Please enter username and password",
+    "Logged in as": "Logged in as"
 }
