--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -23,6 +23,10 @@
     "go_to_settings": "Zu Einstellungen",
     "no_username_or_password": "Bitte geben sie Benutzernamen und Passwort ein",
     "Logged in as": "Angemeldet als",
-    "Back": "Zurück"
+    "Back": "Zurück",
+    "Pick file": "Wähle eine Datei",
+    "File System": "Datei System",
+    "Gallery": "Gallerie",
+    "Camera": "Kamera"
 }
     
