--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -1,32 +1,32 @@
 {
-    "app_name":"Jvx Mobile Client ",
     "Username:":"Benutzername",
-    "enter_username_hint":"Dein Benutzername",
+    "Your username":"Dein Benutzername",
     "Password:":"Passwort",
-    "enter_password_hint":"Dein Passwort",
+    "Your password":"Dein Passwort",
     "Logon":"Einloggen",
-    "enter_valid_username":"Einen validen Benutzernamen eingeben",
-    "enter_valid_password":"Ein valides Passwort eingeben",
+    "Enter valid username":"Einen validen Benutzernamen eingeben",
+    "Enter valid password":"Ein valides Passwort eingeben",
     "Settings": "Einstellungen",
-    "settings_app_name": "Applikationsname",
-    "settings_app_name_hint": "Neuen Applikationsnamen eingeben",
-    "settings_base_url": "Basis Url",
-    "settings_base_url_hint": "Basis Url eingeben",
-    "settings_general": "Applikations Einstellungen",
-    "settings_language": "Sprache",
+    "App name": "Applikationsname",
+    "Enter new App Name": "Neuen Applikationsnamen eingeben",
+    "Base Url": "Basis Url",
+    "Enter new Base Url": "Basis Url eingeben",
+    "Application Settings": "Applikations Einstellungen",
+    "Language": "Sprache",
     "Save": "Speichern",
     "Exit": "Beenden",
     "Logout": "Ausloggen",
     "Remember me?": "Eingeloggt bleiben?",
     "Error": "Fehler",
     "Close": "Schließen",
-    "go_to_settings": "Zu Einstellungen",
-    "no_username_or_password": "Bitte geben sie Benutzernamen und Passwort ein",
+    "To Settings": "Zu Einstellungen",
+    "Please enter your username and password": "Bitte geben sie Benutzernamen und Passwort ein",
     "Logged in as": "Angemeldet als",
     "Back": "Zurück",
     "Pick file": "Wähle eine Datei",
-    "File System": "Datei System",
+    "Filesystem": "Dateisystem",
     "Gallery": "Gallerie",
-    "Camera": "Kamera"
+    "Camera": "Kamera",
+    "Confirm": "Bestätigen"
 }
     
