fixed localizations bug

--- a/locale/i18n_de.json
+++ b/locale/i18n_de.json
@@ -11,5 +11,6 @@
     "Error": "Fehler",
     "Close": "Schließen",
     "To Settings": "Zu Einstellungen",
-    "Back": "Zurück"
+    "Back": "Zurück",
+    "Open": "Öffnen"
 }
